[FIX] the header z-index and margin

--- a/react-app/src/scss/layout/_header.scss
+++ b/react-app/src/scss/layout/_header.scss
@@ -1,8 +1,11 @@
 .header {
+  z-index: 10;
   display: flex;
   align-items: center;
   justify-content: space-between;
   top: 0;
+  margin-bottom: 10px;
+  border-top: 8px solid white;
   position: sticky;
   background-color: white;
 }
